# udemy-mcp-mastery-building-ai-apps

./: .env  pyproject.toml
01-first-mcp-server/demo-server/: client.py  fastmcp_client.py  server.py
01-first-mcp-server/weather-mcp/: weather-agent.py  weather-client.py  weather-server.py
