[project]
name = "udemy-mcp-mastery-building-ai-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.13.2",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
